K8S/Ingress/prometheus_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod # Replace with your ClusterIssuer name
    kubernetes.io/ingress.class: nginx  
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus-devops.duckdns.org  # Replace with your domain
      secretName: prometheus-tls-secret
  rules:
    - host: prometheus-devops.duckdns.org  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-prometheus
                port:
                  number: 9090
